# rfm

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  utils.rs
tests/: test_rfm.rs
tests/testing/cp/: file-1.txt
