[package]
name = "rfm"
version = "0.5.5"
authors = ["Dmitry Shatokhin <dmtrshatokhin@gmail.com>"]
edition = "2018"
description = "Expanded options for interacting with files and directories. Creating/copying/moving etc. File manager, only inside Rust 🦀"
license = "MIT"
keywords = ["filesystem", "copy", "move", "dir", "file"]
homepage = "https://github.com/dmtrshat/rfm"
documentation = "https://docs.rs/rfm"
repository = "https://github.com/dmtrshat/rfm"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[lib]
name = "rfm"
crate-type = ["lib"]

[dependencies]
